# EGida

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  _cssfix.py  _patch_graph.py  alembic.ini  dump_code.bat  pyproject.toml
alembic/: env.py  script.py.mako
app/: main.py
app/api/: __init__.py  deps.py
app/api/routes/: __init__.py  auth.py  edges.py  graph.py  groups.py  health.py  invites.py  map.py  nodes.py  organizations.py  spheres.py
app/core/: config.py  security.py
app/db/: base.py  init_db.py  session.py
app/models/: __init__.py  audit.py  invite.py  organization.py  password_reset.py  structures.py  token.py  user.py
app/schemas/: auth.py  graph.py  invite.py  map.py  organization.py  user.py
app/services/: __init__.py  auth.py  email.py  invites.py  organizations.py
app/static/css/: main.css
app/static/js/: app.js
app/templates/: base.html  index.html
app/templates/email/: invite.html  invite.txt  password_reset.html  password_reset.txt
app/web/: __init__.py  router.py
docs/: colors_palette.md  graph_reference.md  graph_ux_memo.md  roles_matrix.md  spheres_guide.md
tests/: test_auth_service.py  test_graph_nodes.py  test_map_route.py  test_spheres_layout.py
